add data folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+!data/.gitkeep
+data/*.csv
 
 # Created by https://www.toptal.com/developers/gitignore/api/intellij,scala,sbt,spark
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij,scala,sbt,spark
