--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 !data/.gitkeep
 data/*.csv
 data/*.pkl
-
+data/*.txt
 # Created by https://www.toptal.com/developers/gitignore/api/intellij,scala,sbt,spark
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij,scala,sbt,spark
 
