--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 data/*.csv
 data/*.pkl
 data/*.txt
+
+.tree
+
 # Created by https://www.toptal.com/developers/gitignore/api/intellij,scala,sbt,spark
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij,scala,sbt,spark
 
